--- a/DjangoMain/templates/flatpages/default.html
+++ b/DjangoMain/templates/flatpages/default.html
@@ -28,7 +28,10 @@
                        <a class="nav-link" href="/admin">Admin</a>
                    </li>
                    <li class="nav-item">
-                       <a class="nav-link" href="/news/">News</a>
+                       <a class="nav-link" href="/news">News</a>
+                   </li>
+                   <li class="nav-item">
+                       <a class="nav-link" href="/articles">Articles</a>
                    </li>
                </ul>
            </div>
