--- a/DjangoMain/templates/articles.html
+++ b/DjangoMain/templates/articles.html
@@ -48,26 +48,27 @@ Posts
 
     <!-- Pagination -->
     <div class="pagination">
-        {% if is_paginated %}
-            {% if page_obj.has_previous %}
-                <a href="?page=1" class="page-link">&laquo; First</a>
-                <a href="?page={{ page_obj.previous_page_number }}" class="page-link">&lsaquo; Previous</a>
-            {% endif %}
-
-            {% for num in page_obj.paginator.page_range %}
-                {% if page_obj.number == num %}
-                    <span class="current-page page-link">{{ num }}</span>
-                {% else %}
-                    <a href="?page={{ num }}" class="page-link">{{ num }}</a>
-                {% endif %}
-            {% endfor %}
-
-            {% if page_obj.has_next %}
-                <a href="?page={{ page_obj.next_page_number }}" class="page-link">Next &rsaquo;</a>
-                <a href="?page={{ page_obj.paginator.num_pages }}" class="page-link">Last &raquo;</a>
-            {% endif %}
+    {% if is_paginated %}
+        {% if page_obj.has_previous %}
+            <a href="?page=1" class="page-link">&laquo; First</a>
+            <a href="?page={{ page_obj.previous_page_number }}" class="page-link">&lsaquo; Previous</a>
         {% endif %}
+
+        {% for num in page_obj.paginator.page_range %}
+            {% if page_obj.number == num %}
+                <span class="current-page page-link">{{ num }}</span>
+            {% elif num > page_obj.number|add:'-2' and num < page_obj.number|add:'2' %} {# Show 5 pages around the current page #}
+                <a href="?page={{ num }}" class="page-link">{{ num }}</a>
+            {% endif %}
+        {% endfor %}
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}" class="page-link">Next &rsaquo;</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}" class="page-link">Last &raquo;</a>
+        {% endif %}
+    {% endif %}
     </div>
+
     <!-- Pagination -->
 
     <div class="button-container">
