--- a/DjangoMain/templates/articles.html
+++ b/DjangoMain/templates/articles.html
@@ -68,14 +68,20 @@ Posts
         {% endif %}
     {% endif %}
     </div>
-
     <!-- Pagination -->
 
+    {% if user.is_authenticated %}
+        <a href="{% url 'account' %}" class="account-button">Account</a>
+    {% else %}
+        <a href="{% url 'login' %}" class="login-button">Login</a>
+    {% endif %}
+
     <div class="button-container">
-        <a href="{% url 'create-article' %}" class="create-post-button">Create Articles</a>
+        <a href="{% url 'create-article' %}" class="create-post-button">Create Article</a>
         <a href="javascript:history.back()" class="back-button">Back</a>
     </div>
-</div>
+    </div>
+
 
 <style>
     body {
@@ -231,6 +237,40 @@ Posts
         color: #fff;
     }
 
+    .login-button {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        padding: 8px 16px;
+        background-color: #000;
+        color: #fff;
+        text-decoration: none;
+        border-radius: 4px;
+        z-index: 1;
+    }
+
+    .login-button:hover {
+        background-color: #111;
+        color: #fff;
+    }
+
+    .account-button {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        padding: 8px 16px;
+        background-color: #000;
+        color: #fff;
+        text-decoration: none;
+        border-radius: 4px;
+        z-index: 1;
+    }
+
+    .account-button:hover {
+        background-color: #111;
+        color: #fff;
+    }
+
     /* Pagination */
 
     .pagination {
@@ -266,7 +306,5 @@ Posts
       background-color: #111;
       color: #fff;
     }
-
-
 </style>
 {% endblock content %}
