--- a/DjangoMain/templates/news.html
+++ b/DjangoMain/templates/news.html
@@ -70,6 +70,12 @@ Posts
     </div>
     <!-- Pagination -->
 
+    {% if user.is_authenticated %}
+        <a href="{% url 'account' %}" class="account-button">Account</a>
+    {% else %}
+        <a href="{% url 'login' %}" class="login-button">Login</a>
+    {% endif %}
+
     <div class="button-container">
         <a href="{% url 'create-news' %}" class="create-post-button">Create News</a>
         <a href="javascript:history.back()" class="back-button">Back</a>
@@ -230,6 +236,40 @@ Posts
         color: #fff;
     }
 
+    .login-button {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        padding: 8px 16px;
+        background-color: #000;
+        color: #fff;
+        text-decoration: none;
+        border-radius: 4px;
+        z-index: 1;
+    }
+
+    .login-button:hover {
+        background-color: #111;
+        color: #fff;
+    }
+
+    .account-button {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        padding: 8px 16px;
+        background-color: #000;
+        color: #fff;
+        text-decoration: none;
+        border-radius: 4px;
+        z-index: 1;
+    }
+
+    .account-button:hover {
+        background-color: #111;
+        color: #fff;
+    }
+
     /* Pagination */
 
     .pagination {
@@ -265,6 +305,9 @@ Posts
       background-color: #111;
       color: #fff;
     }
+
+
+
 
 </style>
 {% endblock content %}
